---------------------------------------------------------------------------------------------------
Version: 1.3.6
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.3.5
Date: 2020-06-19
  Features:
    - Added /RecipeBook command for diagnosing/fixing issues, use /help RecipeBook to see possible options
---------------------------------------------------------------------------------------------------
Version: 1.3.4
Date: 2020-06-11
  Bugfixes:
    - Fixed a crash when re-joining a multiplayer game for the second time after a mod configuration change
    - Fixed that loading certain scenarios would cause translations to be duplicated
---------------------------------------------------------------------------------------------------
Version: 1.3.3
Date: 2020-05-31
  Changes:
    - Deep Storage Unit (DSU) recipes are now hidden from the Recipe Book
    - The log is no longer spammed with recipe book data unless the debug adapter is hooked
  Bugfixes:
    - Fixed a crash when two players were searching at the same time
---------------------------------------------------------------------------------------------------
Version: 1.3.2
Date: 2020-05-26
  Bugfixes:
    - Fixed that object availability would not be updated when migrating
---------------------------------------------------------------------------------------------------
Version: 1.3.1
Date: 2020-05-26
  Bugfixes:
    - Fixed a crash when joining a multiplayer game for not the first time
---------------------------------------------------------------------------------------------------
Version: 1.3.0
Date: 2020-05-26
  Features:
    - Added keyboard shortcuts for changing categories in the search GUI
    - The shortcut button properly toggles the search GUI open/closed, instead of just opening it
    - Hidden objects are now indicated with an [H] moniker
    - Unavailable (unresearched) objects are colored red