@@ -1,7 +1,9 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.6
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fixed a crash related to GUI style changes in Factorio 0.18.33
+    - Fixed typos in changelog
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.5
 Date: 2020-06-19
